apps/stash/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stash-web
  namespace: stash
spec:
  selector:
    app: stash-web
  ports:
  - port: 80
    targetPort: 8080
