apps/stash/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stash
  namespace: stash
  annotations:
    kubernetes.io/ingress.class: cloudflare-tunnel
spec:
  rules:
  - host: stash.ionize13.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stash-web
            port:
              number: 80
